--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.atguigu</groupId>
+    <groupId>com.Sohu</groupId>
     <artifactId>MovieRecommendSystem</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>recommender</module>
+        <module>businessServer</module>
     </modules>
 
     <properties>
@@ -55,7 +56,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.6.2</version>
                 <!--所有的编译用JDK1.8-->
                 <configuration>
                     <source>1.8</source>
